@@ -52,7 +52,7 @@ namespace libtorrent
 {
 	struct TORRENT_EXPORT file_pool : boost::noncopyable
 	{
-		file_pool(int size = 40): m_size(size) {}
+		file_pool(int size = 40): m_size(size), m_low_prio_io(true) {}
 
 		boost::shared_ptr<file> open_file(void* st, std::string const& p
 			, int m, error_code& ec);
@@ -60,12 +60,15 @@ namespace libtorrent
 		void release(std::string const& p);
 		void resize(int size);
 		int size_limit() const { return m_size; }
+		void set_low_prio_io(bool b) { m_low_prio_io = b; }
 
 	private:
+		file_pool(file_pool const&);
 
 		void remove_oldest();
 
 		int m_size;
+		bool m_low_prio_io;
 
 		struct lru_file_entry
 		{
