@@ -243,7 +243,7 @@ void run_elevator_test()
 
 	{
 		error_code ec;
-		disk_io_thread dio(ios, &nop);
+		disk_io_thread dio(ios, &nop, fp);
 		boost::intrusive_ptr<piece_manager> pm(new piece_manager(boost::shared_ptr<void>(), ti, ""
 			, fp, dio, &create_test_storage, storage_mode_sparse));
 
@@ -379,7 +379,7 @@ void run_storage_tests(boost::intrusive_ptr<torrent_info> info
 	{
 	file_pool fp;
 	libtorrent::asio::io_service ios;
-	disk_io_thread io(ios, boost::function<void()>());
+	disk_io_thread io(ios, boost::function<void()>(), fp);
 	boost::shared_ptr<int> dummy(new int);
 	boost::intrusive_ptr<piece_manager> pm = new piece_manager(dummy, info
 		, test_path, fp, io, default_storage_constructor, storage_mode);
@@ -601,7 +601,7 @@ void test_check_files(std::string const& test_path
 
 	file_pool fp;
 	libtorrent::asio::io_service ios;
-	disk_io_thread io(ios, boost::function<void()>());
+	disk_io_thread io(ios, boost::function<void()>(), fp);
 	boost::shared_ptr<int> dummy(new int);
 	boost::intrusive_ptr<piece_manager> pm = new piece_manager(dummy, info
 		, test_path, fp, io, default_storage_constructor, storage_mode);
